<resources>
    <string name="app_name">Football</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="title_activity_team">TeamActivity</string>
    <string name="title_activity_league">LeagueActivity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="screen_match">Matches</string>
    <string name="screen_team">Team</string>
    <string name="screen_league">Leaue</string>
    <string name="screen_news">News</string>
    <string name="screen_favorites">Favorites</string>
    <string name="screen_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_share">Share</string>
    <string name="action_reload">Reload</string>
    <string name="title_matches">Matches</string>
    <string name="title_news">News</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>
    <string name="pref_webview_action_key">pref_webview_action_key</string>
    <string name="pref_webview_action_off">Default Browser</string>
    <string name="pref_webview_action_on">Built In Browser</string>
    <string name="pref_webview_action_title">News Browser</string>
    <string name="pref_webview_action_default">true</string>
    <string name="pref_snackbar_key">pref_snackbar_key</string>
    <string name="pref_snackbar_off">Toast</string>
    <string name="pref_snackbar_on">Snackbar</string>
    <string name="pref_snackbar_title">Messages style</string>
    <string name="pref_snackbar_default">true</string>
    <string name="pref_data_delay_time_key">pref_data_delay_time_key</string>
    <string name="pref_data_delay_time_title">Update Matches</string>
    <string name="pref_data_delay_time_default">480</string>
    <string name="pref_news_delay_time_key">pref_news_delay_time_key</string>
    <string name="pref_news_delay_time_title">Update News</string>
    <string name="pref_news_delay_time_default">30</string>
    <string name="pref_date_span_key">pref_fixture_dates_span_key</string>
    <string name="pref_date_span_title">Calendar width</string>
    <string name="pref_date_span_default">10</string>
    <string name="pref_date_span_high_message">This will SLOW DOWN application</string>
    <string name="pref_delay_time_high">"-1"</string>
    <string name="pref_delay_time_high_message">Data will NEVER UPDATE</string>
    <string-array name="pref_delay_time_titles">
        <item>Every Start</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>4 hours</item>
        <item>8 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_delay_time_values">
        <item>1</item>
        <item>30</item>
        <item>60</item>
        <item>240</item>
        <item>480</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_date_span_titles">
        <item>3 days</item>
        <item>7 days</item>
        <item>10 days</item>
        <item>20 days</item>
        <item>1 month</item>
        <item>All</item>
    </string-array>
    <string-array name="pref_date_span_values">
        <item>3</item>
        <item>7</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>-1</item>
    </string-array>
    <string name="pref_data_update_time_key">pref_data_update_time_key</string>
    <string name="pref_data_update_time_default">0</string>
    <string name="pref_news_update_time_key">pref_news_update_time_key</string>
    <string name="pref_news_update_time_default">0</string>
    <string name="notification_delay_time_min">Match already started or finished</string>
    <string name="notification_title">Match Reminder</string>
    <string name="notification_body">%1$s vs %2$s\nDate: %3$s </string>
    <string name="notification_time">%1$02d/%2$02d/%3$04d %4$02d:%5$02d</string>
    <string name="retrofit_response_empty">Retrofit response is empty</string>
    <string name="retrofit_response_exception">Retrofit response is exception:</string>
    <string name="action_update">ru.vpcb.footballassistant.intent.action.ACTION_UPDATE</string>
    <string name="action_force_update">ru.vpcb.footballassistant.intent.action.ACTION_FORCE_UPDATE</string>
    <string name="action_refresh">ru.vpcb.footballassistant.intent.action.ACTION_REFRESH</string>
    <string name="action_cancel">ru.vpcb.footballassistant.intent.action.ACTION_CANCEL</string>
    <string name="extra_empty_cursor">ru.vpcb.footballassistant.intent.extra.EMPTY_CURSOR</string>
    <string name="extra_progress_counter">ru.vpcb.footballassistant.intent.extra.PROGRESS_COUNTER</string>
    <string name="broadcast_data_update_started">ru.vpcb.footballassistant.intent.action.DATA_UPDATE_STARTED</string>
    <string name="broadcast_data_update_finished">ru.vpcb.footballassistant.intent.action.DATA_UPDATE_FINISHED</string>
    <string name="broadcast_data_no_network">ru.vpcb.footballassistant.intent.action.DATA_NO_NETWORK</string>
    <string name="broadcast_data_update_error">ru.vpcb.footballassistant.intent.action.DATA_UPDATE_ERROR</string>
    <string name="broadcast_data_no_network_empty">ru.vpcb.footballassistant.intent.action.DATA_NO_NETWORK_EMPTY</string>
    <string name="broadcast_data_update_progress">ru.vpcb.footballassistant.intent.action.DATA_UPDATE_PROGRESS</string>
    <string name="broadcast_news_update_started">ru.vpcb.footballassistant.intent.action.NEWS_UPDATE_STARTED</string>
    <string name="broadcast_news_update_finished">ru.vpcb.footballassistant.intent.action.NEWS_UPDATE_FINISHED</string>
    <string name="broadcast_news_no_network">ru.vpcb.footballassistant.intent.action.NEWS_NO_NETWORK</string>
    <string name="broadcast_news_update_error">ru.vpcb.footballassistant.intent.action.NEWS_UPDATE_ERROR</string>
    <string name="broadcast_news_no_network_empty">ru.vpcb.footballassistant.intent.action.NEWS_NO_NETWORK_EMPTY</string>
    <string name="broadcast_news_update_progress">ru.vpcb.footballassistant.intent.action.NEWS_UPDATE_PROGRESS</string>
    <string name="broadcast_notification_change">ru.vpcb.footballassistant.intent.action.DATA_NOTIFICATION_CHANGE</string>
    <string name="broadcast_notification_cancel">ru.vpcb.footballassistant.intent.action.DATA_NOTIFICATION_CANCEL</string>
    <string name="powered_news_api">powered by NewsAPI.org</string>
    <string name="news_api_link">https://newsapi.org</string>
    <string name="text_sm_item_match_long_dash">\u2014</string>
    <string name="text_sm_item_match_start_header">THE MATCH STARTS IN</string>
    <string name="text_sm_item_match_subscript_days">days</string>
    <string name="text_sm_item_match_subscript_hours">hours</string>
    <string name="text_sm_item_match_subscript_mins">minutes</string>
    <string name="text_sm_item_match_league_underline"><u>%1$s</u></string>
    <string name="action_share_match_message">Match: %1$s, League: %2$s, Competition: %3$s,
         Home: %4$s, Away: %5$s, Score( %6$s:%7$s ), Status: %8$s"</string>
    <string name="text_sm_item_match_letter_w">W</string>
    <string name="text_sm_item_match_letter_d">D</string>
    <string name="text_sm_item_match_letter_l">L</string>
    <string name="text_sm_item_match_betting">FOOTBALL &amp; BETTING</string>
    <string name="text_sm_item_match_bet_sub_win">win</string>
    <string name="text_sm_item_match_bet_sub_draw">draw</string>
    <string name="text_sm_item_match_bet_sub_loss">loss</string>
    <string name="text_sm_item_meeting">MEETINGS</string>
    <string name="text_tm_item_player_sub_birthday">birthday</string>
    <string name="text_tm_item_player_sub_contract">contract end</string>
    <string name="text_tm_item_player_sub_number">number</string>
    <string name="text_tm_item_player_nationality">[ \u2014 ]</string>
    <string name="text_lg_head_team_pos">№</string>
    <string name="text_lg_head_team_name">Club Name</string>
    <string name="text_lg_head_team_matches">M</string>
    <string name="text_lg_head_team_points">P</string>
    <string name="text_lg_head_team_goals">G</string>
    <string name="text_lg_head_team_wins">W</string>
    <string name="text_lg_head_team_draws">D</string>
    <string name="text_lg_head_team_losses">L</string>
    <string name="text_news_item_head_underlined"> <u> %1$s </u> </string>
    <string name="text_news_item_time_min">%1$dm</string>
    <string name="text_news_item_time_hour">%1$dh</string>
    <string name="text_news_item_time_empty">\u2014</string>
    <string name="text_news_item_separator">|</string>
    <string name="action_share_news_message">Football Assistant News: %1$s  href:%2$s"</string>
    <string name="widget_empty_dash">-</string>
    <string name="widget_empty_long_dash">\u2014</string>
    <string name="widget_empty_time">- : -</string>
    <string name="image_rm_item_team_logo">The Football Team Logo image</string>
    <string name="text_rm_item_match_time">The Football Match time</string>
    <string name="text_sm_item_match_league">The Name of League</string>
    <string name="text_sm_item_match_score">The Score of Match</string>
    <string name="image_tm_item_player_flag_dsc">The Country Flag of Player</string>
    <string name="text_tm_item_player_name_dsc">The Player Name and Second Name</string>
    <string name="text_tm_item_player_number_dsc">The Player Number</string>
    <string name="text_tm_item_player_position_dsc">The Player Position in a Team</string>
    <string name="text_tm_item_player_birthday_dsc">The Player Birthday Date</string>
    <string name="text_tm_item_player_contract_dsc">The Player Contract End Date</string>
    <string name="text_tm_item_player_sub_position_dsc">The Player Subscript Position</string>
    <string name="text_tm_item_player_sub_birthday_dsc">The Player Subscript Birthday Date</string>
    <string name="text_tm_item_player_sub_contract_dsc">The Player Subscript Contract End Date</string>
    <string name="text_lg_team_name_dsc">The Team Name in League Table</string>
    <string name="text_lg_team_matches_dsc">The Number of Team Matches in League Table</string>
    <string name="text_lg_team_points_dsc">The Number of Team Points in League Table</string>
    <string name="text_lg_team_goals_dsc">The Number of Team Goals in League Table</string>
    <string name="text_lg_team_wins_dsc">The Number of Team Wins in League Table</string>
    <string name="text_lg_team_draws_dsc">The Number of Team Draws in League Table</string>
    <string name="text_lg_team_losses_dsc">The Number of Team Losses in League Table</string>
    <string name="text_test_rm_item_league">Premier League 2017/18</string>
    <string name="text_test_sm_match_recycler_date">20 Jan 2018</string>
    <string name="text_test_sm_match_recycler_score">1 : 0</string>
    <string name="text_test_tm_item_player_name">Michael Dawson</string>
    <string name="text_test_tm_item_player_number">21</string>
    <string name="text_test_tm_item_player_position">Centre-Back</string>
    <string name="text_test_tm_item_player_birthday">18.11.83</string>
    <string name="text_test_tm_item_player_contract">30.06.18</string>
    <string name="text_test_lg_item_team_pos_1">1</string>
    <string name="text_test_lg_item_team_pos_122">122</string>
    <string name="text_test_lg_item_team_pos_165">165</string>
    <string name="text_test_lg_item_team_pos_112">112</string>
    <string name="text_test_lg_item_team_pos_177">177</string>
    <string name="text_test_lg_item_team_pos_182">182</string>
    <string name="text_test_lg_item_team_pos_134">134</string>
    <string name="text_test_lg_item_team_name_1">Eintracht Braunschweig FC Junior League</string>
</resources>