<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycler_match_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_micro"
    android:layout_marginEnd="@dimen/margin_small"
    android:layout_marginStart="@dimen/margin_small"
    app:cardCornerRadius="@dimen/card_corner_rm_item_radius">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:id="@+id/constraint_recycler_match_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/player_recycler_card_back_light"
        android:paddingEnd="@dimen/margin_normal"
        android:paddingStart="@dimen/margin_normal">

        <ImageView
            android:id="@+id/image_tm_player_country"
            android:layout_width="@dimen/image_rm_item_size"
            android:layout_height="@dimen/image_rm_item_size"
            android:layout_marginBottom="16dp"

            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_tm_item_player_flag_dsc"
            android:src="@drawable/flag_001"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_tm_item_name"
            style="@style/Name.Item.Player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/text_tm_item_player_name_dsc"
            android:text="@string/text_test_tm_item_player_name"
            app:layout_constraintBottom_toTopOf="@+id/text_tm_item_position"
            app:layout_constraintEnd_toStartOf="@+id/guide_v4"
            app:layout_constraintStart_toEndOf="@+id/image_tm_player_country"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_tm_item_position"
            style="@style/Position.Item.Player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/text_tm_item_player_position_dsc"
            android:text="@string/text_test_tm_item_player_position"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_tm_item_name"
            app:layout_constraintStart_toStartOf="@+id/text_tm_item_name" />

        <TextView
            android:id="@+id/text_tm_item_number"
            style="@style/Number.Item.Player"
            android:layout_width="@dimen/text_tm_item_player_number_width"
            android:layout_height="@dimen/text_tm_item_player_number_width"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/text_tm_item_player_number_dsc"
            android:text="@string/text_test_tm_item_player_number"
            app:layout_constraintBottom_toBottomOf="@+id/text_tm_item_name"
            app:layout_constraintEnd_toStartOf="@+id/guide_v5"
            app:layout_constraintStart_toStartOf="@+id/guide_v4"
            app:layout_constraintTop_toTopOf="@+id/text_tm_item_name" />

        <TextView
            android:id="@+id/text_tm_item_bitrhday"
            style="@style/Date.Item.Player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_tm_item_player_birthday_dsc"
            android:text="@string/text_test_tm_item_player_birthday"
            app:layout_constraintBottom_toBottomOf="@+id/text_tm_item_number"
            app:layout_constraintEnd_toStartOf="@+id/guide_v1"
            app:layout_constraintStart_toStartOf="@+id/guide_v5"
            app:layout_constraintTop_toTopOf="@+id/text_tm_item_number" />

        <TextView
            android:id="@+id/text_tm_item_contract"
            style="@style/Date.Item.Player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_tm_item_player_contract_dsc"
            android:text="@string/text_test_tm_item_player_contract"
            app:layout_constraintBottom_toBottomOf="@+id/text_tm_item_bitrhday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guide_v1"
            app:layout_constraintTop_toTopOf="@+id/text_tm_item_bitrhday" />

        <TextView
            android:id="@+id/text_tm_item_sub_position"
            style="@style/Sub.Item.Player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/text_tm_item_player_sub_position_dsc"
            android:text="@string/text_tm_item_player_sub_number"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guide_v5"
            app:layout_constraintStart_toStartOf="@+id/guide_v4" />

        <TextView
            android:id="@+id/text_tm_item_sub_birthday"
            style="@style/Sub.Item.Player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/text_tm_item_player_sub_birthday_dsc"
            android:text="@string/text_tm_item_player_sub_birthday"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guide_v1"
            app:layout_constraintStart_toStartOf="@+id/guide_v5" />

        <TextView
            android:id="@+id/text_tm_item_sub_contract"
            style="@style/Sub.Item.Player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/text_tm_item_player_sub_contract_dsc"
            android:text="@string/text_tm_item_player_sub_contract"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guide_v1" />


        <android.support.constraint.Guideline
            android:id="@+id/guide_v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.79" />

        <android.support.constraint.Guideline
            android:id="@+id/guide_v5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6" />

        <android.support.constraint.Guideline
            android:id="@+id/guide_v4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"

            />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>