<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_recycler_match_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/match_recycler_card_back_light"
    android:paddingEnd="@dimen/margin_normal"
    android:paddingStart="@dimen/margin_normal">

    <ImageView
        android:id="@+id/image_sm_team_home"
        android:layout_width="@dimen/image_rm_item_size"
        android:layout_height="@dimen/image_rm_item_size"
        android:layout_marginBottom="16dp"

        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image_rm_item_team_logo"
        android:src="@drawable/logo_chelsea"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guide_v4"
        app:layout_constraintStart_toStartOf="@+id/guide_v4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_sm_team_away"
        android:layout_width="@dimen/image_rm_item_size"
        android:layout_height="@dimen/image_rm_item_size"
        android:contentDescription="@string/image_rm_item_team_logo"
        android:src="@drawable/logo_stoke_city"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guide_v1"
        app:layout_constraintStart_toStartOf="@+id/guide_v1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_sm_item_score"
        style="@style/Score.Item.Recycler.Match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:contentDescription="@string/text_sm_item_match_score"
        android:text="@string/text_test_sm_match_recycler_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/image_sm_team_away"
        app:layout_constraintStart_toEndOf="@+id/image_sm_team_home"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_sm_item_league"
        style="@style/League.Item.Recycler.Match"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/text_sm_item_match_league"
        android:text="@string/text_test_rm_item_league"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/image_sm_team_away"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_sm_item_date"
        style="@style/Date.Item.Recycler.Match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="2dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/text_rm_item_match_time"
        android:text="@string/text_test_sm_match_recycler_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_sm_item_league"
        app:layout_constraintStart_toStartOf="@+id/guide_v5"
        app:layout_constraintTop_toBottomOf="@+id/text_sm_item_league" />


    <android.support.constraint.Guideline
        android:id="@+id/guide_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_v5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.83" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_v4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"

        />

</android.support.constraint.ConstraintLayout>
