<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycler_match_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_micro"
    android:layout_marginEnd="@dimen/margin_small"
    android:layout_marginStart="@dimen/margin_small"
    app:cardCornerRadius="@dimen/card_corner_rm_item_radius">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraint_recycler_match_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/match_recycler_card_back_light" >


        <TextView
            android:id="@+id/text_lg_pos"
            style="@style/Pos.Item.League"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_lg_item_team_pos_dsc"
            android:text="@string/text_test_lg_item_team_pos_1"
            />

        <ImageView
            android:id="@+id/image_lg_team_logo"
            android:layout_width="@dimen/image_lg_item_team_logo_size"
            android:layout_height="@dimen/image_lg_item_team_logo_size"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/image_lg_item_team_logo_dsc"
            android:scaleType="fitCenter"
            android:src="@drawable/fc_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/separator_v1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/text_lg_team_name"
            style="@style/Name.Item.League"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/text_lg_team_name_dsc"
            android:text="@string/text_test_lg_item_team_name_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guide_v2"
            app:layout_constraintStart_toEndOf="@+id/separator_v2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_lg_matches"
            style="@style/Value.Item.League"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_lg_team_matches_dsc"
            android:text="@string/text_test_lg_item_team_pos_122"
            />

        <TextView
            android:id="@+id/text_lg_points"
            style="@style/Value.Item.League"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_lg_team_points_dsc"
            android:text="@string/text_test_lg_item_team_pos_165"
            />

        <TextView
            android:id="@+id/text_lg_goals"
            style="@style/Value.Item.League"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_lg_team_goals_dsc"
            android:text="@string/text_test_lg_item_team_pos_112"
            />


        <TextView
            android:id="@+id/text_lg_wins"
            style="@style/Value.Item.League"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_lg_team_wins_dsc"
            android:text="@string/text_test_lg_item_team_pos_177"
            />

        <TextView
            android:id="@+id/text_lg_draws"
            style="@style/Value.Item.League"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_lg_team_draws_dsc"
            android:text="@string/text_test_lg_item_team_pos_182"
            />

        <TextView
            android:id="@+id/text_lg_losses"
            style="@style/Value.Item.League"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_lg_team_losses_dsc"
            android:text="@string/text_test_lg_item_team_pos_134"
            />


        <ImageView
            android:id="@+id/separator_v1"
            android:layout_width="@dimen/margin_micro"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/league_lg_item_separator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guide_v1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/separator_v2"
            android:layout_width="@dimen/margin_micro"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/league_lg_item_separator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_lg_team_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/separator_v3"
            android:layout_width="@dimen/margin_micro"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/league_lg_item_separator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guide_v2"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/separator_v4"
            android:layout_width="@dimen/margin_micro"
            android:layout_height="match_parent"
            android:background="@color/league_lg_item_separator"
            />
        <ImageView
            android:id="@+id/separator_v5"
            android:layout_width="@dimen/margin_micro"
            android:layout_height="match_parent"
            android:background="@color/league_lg_item_separator"
            />
        <ImageView
            android:id="@+id/separator_v6"
            android:layout_width="@dimen/margin_micro"
            android:layout_height="match_parent"
            android:background="@color/league_lg_item_separator"
            />
        <ImageView
            android:id="@+id/separator_v7"
            android:layout_width="@dimen/margin_micro"
            android:layout_height="match_parent"
            android:background="@color/league_lg_item_separator"
            />

        <ImageView
            android:id="@+id/separator_v8"
            android:layout_width="@dimen/margin_micro"
            android:layout_height="match_parent"
            android:background="@color/league_lg_item_separator"
            />

        <ImageView
            android:id="@+id/separator_h1"
            android:layout_width="@dimen/margin_micro"
            android:layout_height="match_parent"
            android:background="@color/league_lg_item_separator"
            />

        <ImageView
            android:id="@+id/separator_h2"
            android:layout_width="@dimen/margin_micro"
            android:layout_height="match_parent"
            android:background="@color/league_lg_item_separator"
            />


        <android.support.constraint.Guideline
            android:id="@+id/guide_v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <android.support.constraint.Guideline
            android:id="@+id/guide_v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <android.support.constraint.Guideline
            android:id="@+id/guide_v3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.68" />


        <android.support.constraint.Guideline
            android:id="@+id/guide_v4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.87"
            />

        <android.support.constraint.Guideline
            android:id="@+id/guide_v5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <android.support.constraint.Guideline
            android:id="@+id/guide_v6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintGuide_percent="1.0" />

        <android.support.constraint.Guideline
            android:id="@+id/guide_v7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintGuide_percent="1.0" />

        <android.support.constraint.Guideline
            android:id="@+id/guide_v8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1.0" />


    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>